--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "pactrack"
 version = "0.1.0"
 edition = "2024"
+repository = "https://github.com/greasycat/pactrack.git"
 
 [dependencies]
 chrono = { version = "0.4", features = ["clock"] }
@@ -20,3 +21,8 @@ toml = "0.8"
 
 [dev-dependencies]
 tempfile = "3"
+
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
